--- a/book/templates/user/book.html
+++ b/book/templates/user/book.html
@@ -43,7 +43,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" href="user">Home</a>
+                <a class="nav-link active" href="../user">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="books">Browse Books</a>
@@ -58,7 +58,7 @@
                 <a class="nav-link" href="contact">Contact</a>
               </li>
               <li class="nav-item">
-                <a href="logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
+                <a class="nav-link" href="logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
               </li>
     
             </ul>
