--- a/book/templates/user/borrow.html
+++ b/book/templates/user/borrow.html
@@ -58,7 +58,7 @@
                 <a class="nav-link" href="contact">Contact</a>
               </li>
               <li class="nav-item">
-                <a href="logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
+                <a class="nav-link" href="logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
               </li>
     
             </ul>
@@ -97,6 +97,13 @@
             </table>
         </div>
     </div>
+    {% if messages %}
+    <div class="alert alert-dismissible fade show" role="alert">
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }} mt-3">{{ message }}</div>
+        {% endfor %}
+    </div>
+    {% endif %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
