--- a/book/templates/user/user.html
+++ b/book/templates/user/user.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Library Management - Home</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   {% load static %}
   <link rel="stylesheet" href="{% static 'style.css' %}">
@@ -58,13 +59,13 @@
             <a class="nav-link" href="view_borrows">borrowed books</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="about">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a href="logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
+            <a class=" nav-link" href="logout"><i class="bi bi-box-arrow-right"></i> Logout</a>
           </li>
 
         </ul>
@@ -76,7 +77,7 @@
   <section class="hero-section mb-4">
     <h1>Welcome to Our Library</h1>
     <p>Explore a world of knowledge and find your next favorite book.</p>
-    <a href="#" class="btn btn-primary btn-lg">Browse Books</a>
+    <a href="books" class="btn btn-primary btn-lg">Browse Books</a>
   </section>
 
   <!-- Main Content -->
