--- a/book/templates/admin/user.html
+++ b/book/templates/admin/user.html
@@ -108,6 +108,7 @@
             <a href="view_books"><i class="bi bi-book"></i> View Books</a>
             <a href="view_reanted_books"><i class="bi bi-bookmark-check"></i> Rented Books</a>
             <a href="view_user" class="active"><i class="bi bi-people"></i> Users</a>
+            <a href="display_contacts"><i class="fas fa-users"></i> messages</a>
             <a href="logout"><i class="bi bi-box-arrow-right"></i> Logout</a>
         </div>
 
