--- a/book/templates/admin/add_category.html
+++ b/book/templates/admin/add_category.html
@@ -139,6 +139,7 @@
             <a href="view_books"><i class="fas fa-book"></i> View Books</a>
             <a href="view_reanted_books"><i class="fas fa-bookmark"></i> Rented Books</a>
             <a href="view_user"><i class="fas fa-users"></i> Users</a>
+            <a href="display_contacts"><i class="fas fa-users"></i> messages</a>
             <a href="logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
         </div>
 
