--- a/book/templates/admin/view_reanted_book.html
+++ b/book/templates/admin/view_reanted_book.html
@@ -31,12 +31,13 @@
             padding: 10px 15px;
             display: block;
             border-radius: 5px;
+            text-decoration:none ;
             transition: all 0.3s ease-in-out;
         }
 
         .sidebar a:hover {
             background-color: #495057;
-            text-decoration: none;
+            text-decoration:none ;
         }
 
         .sidebar a.active {
@@ -117,8 +118,9 @@
             <a href="category"><i class="bi bi-folder-plus"></i> Add Category</a>
             <a href="genres"><i class="bi bi-collection"></i> Add Genres</a>
             <a href="view_books"><i class="bi bi-book"></i> View Books</a>
-            <a href="view_reanted_books" class="active"><i class="bi bi-bookmark-check"></i> Rented Books</a>
+            <a href="view_reanted_books" class=""><i class="bi bi-bookmark-check"></i> Rented Books</a>
             <a href="view_user"><i class="bi bi-people"></i> Users</a>
+            <a href="display_contacts"><i class="fas fa-users"></i> messages</a>
             <a href="logout"><i class="bi bi-box-arrow-right"></i> Logout</a>
         </div>
 
