--- a/book/templates/user/about.html
+++ b/book/templates/user/about.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    {% load static %}
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -15,10 +16,13 @@
         }
 
         .hero {
-            background: url('https://source.unsplash.com/1600x500/?library') center/cover no-repeat;
-            color: white;
+            background: url('{% static "image/banner2.jpg" %}') no-repeat center center;
+            background-size: cover;
+            color: rgb(253, 252, 246);
+            size: 2rem;
             padding: 80px 20px;
             text-align: center;
+            
         }
 
         .hero h1 {
@@ -89,8 +93,11 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="user">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="books">Books</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="#">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="books">Browse Books</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="about">About</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="view_borrows">borrowed books</a>
+                      </li>
                     <li class="nav-item"><a class="nav-link" href="contact">Contact</a></li>
                     <li class="nav-item"><a class="nav-link" href="logout"><i class="bi bi-box-arrow-right"></i> Logout</a></li>
                 </ul>
@@ -137,17 +144,17 @@
         <h2>Meet Our Team</h2>
         <div class="row text-center">
             <div class="col-sm-6 col-md-4">
-                <img src="https://via.placeholder.com/150" alt="Team Member" class="img-fluid" style="width: 150px;">
+                <img src="{% static "image/img2.jpg" %}" alt="Team Member" class="img-fluid" style="width: 100px; height:100px; border-radius:50px;" >
                 <h5 class="mt-3">John Doe</h5>
                 <p>Chief Librarian</p>
             </div>
             <div class="col-sm-6 col-md-4">
-                <img src="https://via.placeholder.com/150" alt="Team Member" class="img-fluid" style="width: 150px;">
+                <img src="{% static "image/img3.jpg" %}" alt="Team Member" class="img-fluid" style="width: 100px; height:100px ; border-radius:50px;">
                 <h5 class="mt-3">Jane Smith</h5>
                 <p>Digital Resources Manager</p>
             </div>
             <div class="col-sm-6 col-md-4">
-                <img src="https://via.placeholder.com/150" alt="Team Member" class="img-fluid" style="width: 150px;">
+                <img src="{% static "image/images2.jpg" %}" alt="Team Member" class="img-fluid" style="width: 100px; height:100px  ; border-radius:50px;">
                 <h5 class="mt-3">Michael Lee</h5>
                 <p>Community Engagement Specialist</p>
             </div>
