--- a/book/templates/user/book.html
+++ b/book/templates/user/book.html
@@ -14,8 +14,8 @@
             max-width: 100%;
             height: 100%%;
             object-fit: cover;
-            width: 200px; /* Set the desired width */
-            height: 300px; /* Set the desired height */
+            width: 400px; /* Set the desired width */
+            height: 500px; /* Set the desired height */
             object-fit: cover; /* Ensures the image fills the dimensions without distortion */
             border: 1px solid #ddd; /* Optional: Add a border for better aesthetics */
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Optional: Add shadow for modern look */
@@ -46,19 +46,19 @@
                 <a class="nav-link active" href="../user">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="books">Browse Books</a>
+                <a class="nav-link" href="../books">Browse Books</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">My Account</a>
+                <a class="nav-link" href="../view_borrows">borrowed books</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="../about">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact">Contact</a>
+                <a class="nav-link" href="../contact">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
+                <a class="nav-link" href="../logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
               </li>
     
             </ul>
