--- a/book/templates/user/view_book.html
+++ b/book/templates/user/view_book.html
@@ -141,7 +141,10 @@
                         <a class="nav-link" href="books">Browse Books</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="view_borrows">borrowed books</a>
+                      </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact">Contact</a>
@@ -164,7 +167,7 @@
                 <option value="">All Genres</option>
                 {% for genre in gen %}
                 <option value="{{ genre.id }}" {% if genre.id|stringformat:"s" == request.GET.genres %}selected{% endif %}>
-                    {{ genre.ge_name }}
+                    {{ genre.ge_name }}, {{ genre.cat_name.name }}
                 </option>
                 {% endfor %}
             </select>
