--- a/book/templates/admin/view_books.html
+++ b/book/templates/admin/view_books.html
@@ -44,6 +44,7 @@
         }
 
         .card {
+            width:250px;
             border: 1px solid #ddd;
             border-radius: 10px;
             overflow: hidden;
@@ -131,7 +132,7 @@
             <a href="category"><i class="bi bi-folder-plus"></i> Add Category</a>
             <a href="genres"><i class="bi bi-collection"></i> Add Genres</a>
             <a href="view_books" class="active"><i class="bi bi-book"></i> View Books</a>
-            <a href="view_reanted_books" class=""><i class="bi bi-bookmark-check"></i> Rented Books</a>
+            <a href="manage_requests" class=""><i class="bi bi-bookmark-check"></i> Rented Books</a>
             <a href="view_user"><i class="bi bi-people"></i> Users</a>
             <a href="display_contacts"><i class="fas fa-users"></i> messages</a>
             <a href="logout"><i class="bi bi-box-arrow-right"></i> Logout</a>
