--- a/book/templates/admin/add_book.html
+++ b/book/templates/admin/add_book.html
@@ -115,7 +115,7 @@
       <a href="category"><i class="fas fa-folder-plus"></i> Add Category</a>
       <a href="genres"><i class="fas fa-th-large"></i> Add Genres</a>
       <a href="view_books"><i class="fas fa-book"></i> View Books</a>
-      <a href="view_reanted_books"><i class="fas fa-bookmark"></i> Rented Books</a>
+      <a href="manage_requests"><i class="fas fa-bookmark"></i> Rented Books</a>
       <a href="view_user"><i class="fas fa-users"></i> Users</a>
       <a href="display_contacts"><i class="fas fa-users"></i> messages</a>
       <a href="logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
