--- a/book/templates/admin/user.html
+++ b/book/templates/admin/user.html
@@ -106,7 +106,7 @@
             <a href="category"><i class="bi bi-folder-plus"></i> Add Category</a>
             <a href="genres"><i class="bi bi-collection"></i> Add Genres</a>
             <a href="view_books"><i class="bi bi-book"></i> View Books</a>
-            <a href="view_reanted_books"><i class="bi bi-bookmark-check"></i> Rented Books</a>
+            <a href="manage_requests"><i class="bi bi-bookmark-check"></i> Rented Books</a>
             <a href="view_user" class="active"><i class="bi bi-people"></i> Users</a>
             <a href="display_contacts"><i class="fas fa-users"></i> messages</a>
             <a href="logout"><i class="bi bi-box-arrow-right"></i> Logout</a>
