--- a/book/templates/user/borrow.html
+++ b/book/templates/user/borrow.html
@@ -72,27 +72,22 @@
             <table class="table table-striped table-bordered">
                 <thead class="table-dark">
                     <tr>
-                        <th>#</th>
-                        <th>Book Title</th>
-                        {% comment %} <th>User</th> {% endcomment %}
-                        <th>Borrow Date</th>
-                        <th>Return Date</th>
+                      <th>Book</th>
+                      <th>Request Date</th>
+                      <th>Status</th>
+                      <th>Return Date</th>
                     </tr>
                 </thead>
                 <tbody>
-                    {% for borrow in borrows %}
+                  {% for borrow in borrows %}
                     <tr>
-                        <td>{{ forloop.counter }}</td>
-                        <td>{{ borrow.book.title }}</td>
-                        {% comment %} <td>{{ borrow.user.username }}</td> {% endcomment %}
-                        <td>{{ borrow.date }}</td>
-                        <td>{{ borrow.r_date }}</td>
-                    </tr>
-                    {% empty %}
-                    <tr>
-                        <td colspan="5" class="text-center text-muted">No borrowed books available.</td>
+                      <td>{{ borrow.book.title }}</td>
+                      <td>{{ borrow.request_date }}</td>
+                      <td>{{ borrow.status }}</td>
+                      <td>{{ borrow.r_date|default:"-" }}</td>
                     </tr>
                     {% endfor %}
+                    
                 </tbody>
             </table>
         </div>
