--- a/book/templates/admin/admin_home.html
+++ b/book/templates/admin/admin_home.html
@@ -125,7 +125,11 @@
                 <a href="category"><i class="fas fa-tags"></i> Add Category</a>
                 <a href="genres"><i class="fas fa-th-large"></i> Add Genres</a>
                 <a href="view_books"><i class="fas fa-book"></i> View Books</a>
-                <a href="manage_requests"><i class="fas fa-bookmark"></i> Rented Books</a>
+                <a href="manage_requests"><i class="fas fa-bookmark"></i> Request Books</a>
+                <a href="rented"><i class="fas fa-bookmark"></i> Rented Books</a>
+                <a href="manage_returns"><i class="fas fa-bookmark"></i>manage_returns</a>
+                <a href="books_returns"><i class="fas fa-bookmark"></i>returned books</a>
+                <a href="reject"><i class="fas fa-bookmark"></i> Rejected request</a>
                 <a href="view_user"><i class="fas fa-users"></i> Users</a>
                 <a href="display_contacts"><i class="fas fa-users"></i> messages</a>
                 <a href="logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
