--- a/book/templates/admin/add_book.html
+++ b/book/templates/admin/add_book.html
@@ -164,6 +164,10 @@
                 </select>
               </div>
               <div class="mb-3">
+                <label for="stock">Available_copies</label>
+                <input type="number" id="available_copies" name="available_copies" class="form-control" required>
+              </div>
+              <div class="mb-3">
                 <label for="image">Cover Image</label>
                 <input type="file" id="image" name="image" class="form-control" required>
               </div>
