--- a/book/templates/user/borrowed.html
+++ b/book/templates/user/borrowed.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nexora</title>
+    <title>librarty</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
@@ -14,8 +14,8 @@
             max-width: 100%;
             height: 100%%;
             object-fit: cover;
-            width: 400px; /* Set the desired width */
-            height: 500px; /* Set the desired height */
+            width: 200px; /* Set the desired width */
+            height: 300px; /* Set the desired height */
             object-fit: cover; /* Ensures the image fills the dimensions without distortion */
             border: 1px solid #ddd; /* Optional: Add a border for better aesthetics */
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Optional: Add shadow for modern look */
@@ -61,7 +61,7 @@
             <a class="nav-link" href="../contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class=" nav-link" href="logout"><i class="bi bi-box-arrow-right"></i> Logout</a>
+            <a class=" nav-link" href="../logout"><i class="bi bi-box-arrow-right"></i> Logout</a>
           </li>
 
         </ul>
@@ -69,33 +69,52 @@
     </div>
   </nav>
     <!-- book Section -->
-    <div class="container mt-5">
-        <div class="row align-items-center bg-light shadow-sm p-4 rounded">
-            <!-- book Image -->
-            <div class="col-md-6 text-center">
-                <img class="Book-img rounded" src="{{Book.cover_image.url}}" alt="Book Image">
-            </div>
-            <!-- book Info -->
-            <div class="col-md-6 Book-info">
-                <h2 class="fw-bold">{{ Book.title}}</h2>
-                <p class="fw-bold">Auther:{{ Book.auther}}</p>
-                <p class="text-muted">Description:</p>
-                <h4>{{ Book.description }}</h4>
-                <p class="">publication_date:</p>
-                <h3 class="">{{ Book.publication_date }}</h3>
-               
-                <p class="text-muted">category:</p>
-                <h3 class="">{{ Book.genre.cat_name.name }}</h3>
-                <p class="text-muted">genres:</p>
-                <h3 class="">{{ Book.genre.ge_name }}</h3>
-                <div class="mt-4">
-                    <a href="{% url 'book_reant' Book.id %}" class="btn btn-primary">Borrow</a>
-
-                </div>
-            </div>
+    <div class="container py-5">
+        <h2 class="text-center mb-4">Borrowed Books</h2>
+        <div class="table-responsive">
+            <table class="table table-striped table-bordered">
+                <thead class="table-dark">
+                    <tr>
+                        <th>Book Title</th>
+                        
+                        <th>recived Date</th>
+                        <th>Return Date</th>
+                   
+                        
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for b in borrow %}
+                    <tr>
+                        <td>{{ b.book.title }}</td>
+                        
+                        <td>{{ b.approval_date|default:"N/A" }}</td>
+                        <td>{{ b.r_date|default:"N/A" }}</td>
+                        <td>
+                          <a href="{% url 'request_return' b.id %}" class="btn btn-primary btn-sm">Request Return</a>
+                          
+                      </td>
+                    </tr>
+                {% endfor %}
+                    
+                </tbody>
+            </table>
+            <div class="messages">
+              {% if messages %}
+                  {% for message in messages %}
+                      <div class="alert {{ message.tags }} alert-dismissible fade show" role="alert">
+                          {{ message }}
+                          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                      </div>
+                  {% endfor %}
+              {% endif %}
+          </div>
         </div>
     </div>
-
+  
+    </div>
+   
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
