--- a/book/templates/user/contact.html
+++ b/book/templates/user/contact.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   {% load static %}
-  <link rel="stylesheet" href="{% static 'style.css' %}">
+ 
   <style>
     body {
       background: linear-gradient(135deg, #f8f9fa, #e9ecef);
@@ -38,30 +38,34 @@
   <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Library Management</a>
+      <a class="navbar-brand" href="#">Library </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="user">Home</a>
+            <a class="nav-link active" href="user">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="books">Browse Books</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="view_borrows">borrowed books</a>
+            <a class="nav-link" href="view_borrow_req">requst books</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="view_borrow">borrowed books</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about">About</a>
-        </li>
+          </li>
           <li class="nav-item">
-            <a class="nav-link active" href="contact">Contact</a>
+            <a class="nav-link" href="contact">Contact</a>
           </li>
           <li class="nav-item">
             <a class=" nav-link" href="logout"><i class="bi bi-box-arrow-right"></i> Logout</a>
           </li>
+
         </ul>
       </div>
     </div>
