--- a/book/templates/user/requests.html
+++ b/book/templates/user/requests.html
@@ -33,41 +33,44 @@
     </style>
 </head>
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Library </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link active" href="user">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="books">Browse Books</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="view_borrows">borrowed books</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact">Contact</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
-              </li>
-    
-            </ul>
-          </div>
-        </div>
-      </nav>
+  <!-- Navigation Bar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Library </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" href="../user">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../books">Browse Books</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../view_borrow_req">requst books</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../view_borrow">borrowed books</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../contact">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class=" nav-link" href="logout"><i class="bi bi-box-arrow-right"></i> Logout</a>
+          </li>
+
+        </ul>
+      </div>
+    </div>
+  </nav>
     <!-- book Section -->
     <div class="container py-5">
-        <h2 class="text-center mb-4">Borrowed Books</h2>
+        <h2 class="text-center mb-4">Request Books</h2>
         <div class="table-responsive">
             <table class="table table-striped table-bordered">
                 <thead class="table-dark">
@@ -75,16 +78,15 @@
                       <th>Book</th>
                       <th>Request Date</th>
                       <th>Status</th>
-                      <th>Return Date</th>
                     </tr>
                 </thead>
                 <tbody>
-                  {% for borrow in borrows %}
+                  {% for req in requests %}
                     <tr>
-                      <td>{{ borrow.book.title }}</td>
-                      <td>{{ borrow.request_date }}</td>
-                      <td>{{ borrow.status }}</td>
-                      <td>{{ borrow.r_date|default:"-" }}</td>
+                      <td>{{ req.book.title }}</td>
+                      <td>{{ req.request_date }}</td>
+                      <td>{{ req.status }}</td>
+                      
                     </tr>
                     {% endfor %}
                     
@@ -99,6 +101,7 @@
         {% endfor %}
     </div>
     {% endif %}
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
