--- a/book/templates/user/view_book.html
+++ b/book/templates/user/view_book.html
@@ -125,39 +125,41 @@
     </style>
 </head>
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Library</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="user">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="books">Browse Books</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="view_borrows">borrowed books</a>
-                      </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="logout" class="nav-link">
-                            <i class="bi bi-box-arrow-right"></i> Logout
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+  <!-- Navigation Bar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Library </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" href="../user">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../books">Browse Books</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../view_borrow_req">requst books</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../view_borrow">borrowed books</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../contact">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class=" nav-link" href="../logout"><i class="bi bi-box-arrow-right"></i> Logout</a>
+          </li>
+
+        </ul>
+      </div>
+    </div>
+  </nav>
 
     <!-- Search Bar -->
     <div class="container search-bar">
