--- a/book/templates/admin/display_contacts.html
+++ b/book/templates/admin/display_contacts.html
@@ -44,20 +44,27 @@
     }
 </style>
 <body>
-    <div class="d-flex">
-        <!-- Sidebar -->
+  <div class="d-flex">
+    <!-- Sidebar -->
+    <div class="sidebar">
         <div class="sidebar">
-          <h3>Admin Panel</h3>
-          <a href="../add_books" class=""><i class="fas fa-plus-circle"></i> Add Book</a>
-          <a href="../location"><i class="fas fa-map-marker-alt"></i> Add language </a>
-          <a href="../category"><i class="fas fa-folder-plus"></i> Add Category</a>
-          <a href="../genres"><i class="fas fa-th-large"></i> Add Genres</a>
-          <a href="../view_books"><i class="fas fa-book"></i> View Books</a>
-          <a href="../manage_requests"><i class="fas fa-bookmark"></i> Rented Books</a>
-          <a href="../view_user"><i class="fas fa-users"></i> Users</a>
-          <a href="../display_contacts" class="active"><i class="fas fa-users"></i> messages</a>
-          <a href="../logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
+            <h3>Admin Panel</h3>
+            <a href="add_books"><i class="fas fa-plus-circle"></i> Add Book</a>
+            <a href="location"><i class="fas fa-map-marker-alt"></i> Add Lnguage</a>
+            <a href="category"><i class="fas fa-tags"></i> Add Category</a>
+            <a href="genres"><i class="fas fa-th-large"></i> Add Genres</a>
+            <a href="view_books"><i class="fas fa-book"></i> View Books</a>
+            <a href="manage_requests"><i class="fas fa-bookmark"></i> Request Books</a>
+            <a href="rented"><i class="fas fa-bookmark"></i> Rented Books</a>
+            <a href="manage-extension-requests"><i class="fas fa-bookmark"></i>returns extension</a>
+            <a href="manage_returns"><i class="fas fa-bookmark"></i>manage_returns</a>
+            <a href="books_returns"><i class="fas fa-bookmark"></i>returned books</a>
+            <a href="reject"><i class="fas fa-bookmark"></i> Rejected request</a>
+            <a href="view_user"><i class="fas fa-users"></i> Users</a>
+            <a href="display_contacts"><i class="fas fa-users"></i> messages</a>
+            <a href="logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
         </div>
+    </div>
     <div class="container mt-5">
         <h2 class="text-center">Contact Form Submissions</h2>
         <table class="table table-striped table-bordered mt-4">
