--- a/book/templates/user/user.html
+++ b/book/templates/user/user.html
@@ -62,6 +62,9 @@
             <a class="nav-link" href="view_borrow">borrowed books</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="view_borrow_history">borrowed history</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="about">About</a>
           </li>
           <li class="nav-item">
